--- a/heroku-static/public/index.html
+++ b/heroku-static/public/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <title>Bootstrap</title>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<style>
+	img {
+		width: 200px;
+	}
+</style>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<title></title>
 </head>
 <body>
-  <div class="jumbotron">
+<div class="jumbotron">
   <h1>MI 362</h1>
-  <p>...</p>
-  <p>Web Admin</a></p>
+  <p>Jake Eisenberg</p>
+  <img src="photo.jpg"></img>
+<p></p>
 </div>
-
-
 </body>
 </html>
